<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#54A58C"
    android:gravity="center"
    android:orientation="vertical">




    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/transchat"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#006699"
        android:textSize="40sp"
        android:textColorHint="#fff"
        tools:targetApi="jelly_bean" />

    <TextView
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_width="300dp"
        android:textColor="#006"
        android:layout_height="wrap_content"
        android:text="@string/select_language_of_preference"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:entries="@array/country_arrays"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:minHeight="40dp"
        android:minWidth="200dp"
        android:hint="@string/english">

    </Spinner>



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contextClickable="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/profile" android:focusable="true" tools:targetApi="m" />


    <EditText
        android:id="@+id/username"
        android:layout_marginTop="10sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_username"
        android:textColorHint="#006"
        />
    <EditText
        android:id="@+id/status"
        android:layout_marginTop="10sp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_status"
        android:textColorHint="#006"
        />

    <Button
        android:id="@+id/submit"
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="#fff"

        android:background="@drawable/rounded_phone"
        />


</LinearLayout>
