<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_marginTop="90dp"
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textSize="25sp" tools:targetApi="jelly_bean"/>

    <TextView
        android:layout_width="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="35dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/transchat_will_send_a_verification_code_to_your_phone_number_and_automatically_verify_the_number"
        android:paddingEnd="20dp" android:paddingStart="35dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/pro_Bar"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:layout_marginTop="10dp"
            android:paddingRight="16dp"
            >


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >


                <com.hbb20.CountryCodePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Country_Code"
                    android:layout_gravity="center_horizontal"
                    app:showFullName="true"
                    app:countryPreference="GH,US"
                    >

                </com.hbb20.CountryCodePicker>


                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile_no"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/code"
                    android:inputType="number" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"

                android:weightSum="3.0">

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/button_start_verification"
                    android:layout_width="300dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:textColor="#fff"
                    android:background="@drawable/rounded_phone"
                    android:text="@string/start_verification"
                    android:textSize="18sp"

                    />
                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/button_verify_phone"
                    android:layout_width="300dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:textColor="#fff"
                    android:background="@drawable/rounded_phone"
                    android:text="@string/verify"
                    android:textSize="18sp"

                    />


                <Button
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:id="@+id/button_resend"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:background="@drawable/rounded_phone"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
